// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"data" can be used to specify resource data 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "data": Object {
      "boom": 123,
    },
    "kind": "ResourceType",
    "metadata": Object {
      "name": "test-resource-3953b2d0",
    },
  },
]
`;

exports[`"spec" is synthesized as-is 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "ResourceType",
    "metadata": Object {
      "name": "test-resource-3953b2d0",
    },
    "spec": Object {
      "prop1": "hello",
      "prop2": Object {
        "world": 123,
      },
    },
  },
]
`;

exports[`if name is explicitly specified it will be respected 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "MyResource",
    "metadata": Object {
      "name": "boom",
    },
  },
]
`;

exports[`minimal configuration 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "MyResource",
    "metadata": Object {
      "name": "test-my-resource-2998ce93",
    },
  },
]
`;

exports[`printed yaml is alphabetical 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "MyResource",
    "metadata": Object {
      "name": "test-my-resource-2998ce93",
    },
    "spec": Object {
      "firstProperty": "hello",
      "secondProperty": Object {
        "beforeThirdProperty": "world",
        "innerThirdProperty": "!",
      },
    },
  },
]
`;

exports[`respects scope-level metadata 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "K1",
    "metadata": Object {
      "labels": Object {
        "chart": "chart-wide label",
      },
      "name": "test-obj1-10ac3864",
    },
  },
  Object {
    "apiVersion": "v2",
    "kind": "K2",
    "metadata": Object {
      "labels": Object {
        "chart": "chart-wide label",
        "group": "group-wide label",
      },
      "name": "test-group-obj2-efa17a56",
      "namespace": "obj2-namespace",
    },
  },
  Object {
    "apiVersion": "v2",
    "kind": "K2",
    "metadata": Object {
      "labels": Object {
        "chart": "chart-wide label",
        "group": "group-wide label",
        "obj3": "obj3 label",
      },
      "name": "test-group-obj3-57327ee4",
      "namespace": "group-namespace",
    },
  },
]
`;

exports[`synthesized resource name is based on path 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "MyResource",
    "metadata": Object {
      "name": "test-my-resource-2998ce93",
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "MyResource",
    "metadata": Object {
      "name": "test-scope-my-resource-eddbdbb2",
    },
  },
]
`;
